--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
+    "@embroider/compat": "^0.35.0",
+    "@embroider/core": "^0.35.0",
+    "@embroider/router": "^0.35.0",
+    "@embroider/webpack": "^0.35.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.1.0",
@@ -30,6 +34,7 @@
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.20.5",
     "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-fastboot": "3.0.0-beta.2",
     "ember-cli-htmlbars": "^5.1.2",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
@@ -39,6 +44,7 @@
     "ember-fetch": "^8.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-power-select": "^2.0.0",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^8.0.0",
     "ember-source": "~3.19.0",
